[project]
name = "roadmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "geopandas>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pymysql>=1.1.1",
    "pyproj>=3.7.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "shapely>=2.1.1",
    "uvicorn>=0.34.3",
]
